x2goclient (4.0.1.1-0~x2go1) UNRELEASED; urgency=low

  [ Oleksandr Shneyder ]
  * New upstream version (4.0.1.1):
    - Use "127.0.0.1" instead of localhost to avoid wrong IPv6 hostname
      resolution. (Fixes: #151).
    - Wait for x2gocmdexitmessage to return before closing in hidden mode.
    - Support for published applications in X2Go Plugin 
    - Support for "shadow" mode in X2Go Plugin 

  [ Mike Gabriel ]
  * New upstream version (4.0.1.1):
    - If a priv SSH key has been specified, skip the autologin procedure.
      Let's consider a given SSH private key that fails to log the user
      in as an overall login failure. (Fixes: #141).
    - Avoid multiple selectUserSession requests when in broker
      mode.
    - Properly set the remote server address received via selectUserSession
      method when in broker mode. (Fixes: #226).
    - Fix segmentation fault that started occurring since the custom trayIcon
      patch was applied. Segfault only occurred if the tray icon was not used.
    - Show session name in notification bubbles.
    - Update German translation.
    - Add cmdline option --broker-autologoff: Enforce re-authentication against
      X2Go Session Broker after a session has been suspended or terminated.
      (Fixes: #179).
    - Enable full access desktop sharing across user accounts. (Fixes: #222).
    - Make X2Go Client aware of the MATE desktop environment.

  [ Heinrich Schuchardt ]
  * New upstream version (4.0.1.1):
    - Call ssh_clean_pubkey_hash() for deallocating public key hashes instead of
      just calling free(). Required under MS Windows as documented in libssh2
      API. (Fixes: #243). (For further details see:
      http://api.libssh.org/master/group__libssh__session.html).
  * Provide bin:package with debug symbols for X2Go Client. (Fixes: #255).

  [ Ezra Bühler ]
  * New upstream version (4.0.1.1):
    - Fix auto-resume when session type is »Single Application«. (Fixes: #183).

  [ Ricardo Díaz Martín ]