@@ -1,5 +1,9 @@
 x2goclient (4.0.1.1-0~x2go1) UNRELEASED; urgency=low
 
+  [ Terje Andersen ]
+  * New upstream version (4.0.1.1):
+    - Update Norwegian Bokmaal translation file.
+
   [ Oleksandr Shneyder ]
   * New upstream version (4.0.1.1):
     - Use "127.0.0.1" instead of localhost to avoid wrong IPv6 hostname
